# bls-verification-contract

./: Makefile  README.md  domain.txt  hardhat.config.ts  package.json  truffle-config.js  tsconfig.json
bls-crypto/: Cargo.toml  README.md
bls-crypto/examples/: simple_signature.rs
bls-crypto/src/: ffi.rs  lib.rs  test_helpers.rs
bls-crypto/src/bls/: cache.rs  public.rs  secret.rs  signature.rs
bls-crypto/src/hash_to_curve/: mod.rs  try_and_increment.rs  try_and_increment_cip22.rs
bls-crypto/src/hashers/: composite.rs
contracts/: BLS.sol  TestBLS.sol  bls_verifier.sol  deposit_verifier.sol  verifier.sol
contracts/libs/: FpLib.sol  math.sol  types.sol
contracts/tests/: FpLibTest.sol
migrations/: 2_verifier.js
scripts/: deploy.ts  int_to_hex.py
test/: bls.test.ts  index.ts
test/fast/: bls.test.ts
tests/: conftest.py  pyecc_utils.py  test_fplib.py  test_proxy_contract.py  utils.py
ts/: static.ts  utils.ts
