[package]
name = "bls-crypto"
version = "0.3.0"
authors = ["Kobi Gurkan <kobigurk@gmail.com>", "Michael Straka <mstraka@clabs.co>", "Georgios Konstantopoulos <me@gakonst.com>", "Lucas Ege <lucas@clabs.co>", "Victor Graf <victor@clabs.co>"]
edition = "2018"

[dependencies]
# ark-bls12-377 = { version = "0.3" }
ark-bls12-381 = "0.3.0"
ark-serialize = { version = "0.3", features = [ "derive" ] }
ark-ff = { version = "0.3", features = [ "std" ] }
ark-ec = { version = "0.3", features = [ "std" ] }
ark-std = { version = "0.3", features = [ "std" ] }
ark-ed-on-bw6-761 = { version = "0.3" }
ark-crypto-primitives = { version = "0.3" }

# other deps
rand = "0.8.4"
byteorder = "1.4.3"
hex = "0.4.3"
clap = "3.1.18"
log = "0.4.14"
lru = "0.7.2"
env_logger = "0.9.0"
blake2s_simd = "1.0.0"
csv = "1.1.6"
rand_chacha = "0.3"
thiserror = "1.0.30"
once_cell = "1.9.0"

[dev-dependencies]
criterion = "0.3.5"
rand_xorshift = "0.2"

[[example]]
name = "simple_signature"
path = "examples/simple_signature.rs"

[[example]]
name = "pop"
path = "examples/pop.rs"

[[example]]
name = "pop_csv"
path = "examples/pop_csv.rs"

[lib]
crate-type = ["lib", "staticlib"]

[features]
default = [ "compat" ]
test-helpers = []
compat = []

# Enable parallel computation. Cannot be used with WASM.
parallel = ["ark-ec/parallel", "ark-ff/parallel", "ark-crypto-primitives/parallel"]

[[bench]]
name = "batch_bls"
harness = false
